# StaticSlam

./: CMakeLists.txt  CMakeLists.txt~  README.md
dataset/ Forward Frame/: inputCloud1.pcd  inputCloud2.pcd  inputCloud3.pcd  inputCloud4.pcd  inputCloud5.pcd
dataset/Back Frame/: inputCloud1.pcd  inputCloud2.pcd  inputCloud3.pcd  inputCloud4.pcd  inputCloud5.pcd
images/: cloud_filtered_pcd.pcd  nextFrameCloud.pcd  previousFrameCloud.pcd
src/: GenXYZRGB.cpp  OpenniPclViewer.cpp  frame_3diff.cpp  frame_diff.cpp  ground_based_rgbd_people_detector.cpp  image_proc.cpp  openni_grabber.cpp  openni_viewer_simple.cpp  pclSave.cpp  pcl_segmentation.cpp  pcl_segmentation.cpp~  pcl_write.cpp  savePCD.cpp
